gitops/apps/evaluation/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: evaluation-service
  namespace: togglemaster
spec:
  type: ClusterIP
  selector:
    app: evaluation-service
  ports:
    - port: 80
      targetPort: 8004
      name: http
